Run make generate
Signed-off-by: alexander-demicev <alexandr.demicev@suse.com>

--- a/config/crd/bases/operator.cluster.x-k8s.io_addonproviders.yaml
+++ b/config/crd/bases/operator.cluster.x-k8s.io_addonproviders.yaml
@@ -1101,7 +1101,9 @@ spec:
                                   type: object
                                 type: array
                               imageUrl:
-                                description: Container Image URL
+                                description: Container Image URL. If container is
+                                  "manager" and version is not specified, it will
+                                  be set to the provider version.
                                 type: string
                               name:
                                 description: Name of the container. Cannot be updated.
@@ -2514,7 +2516,9 @@ spec:
                             type: object
                           type: array
                         imageUrl:
-                          description: Container Image URL
+                          description: Container Image URL. If container is "manager"
+                            and version is not specified, it will be set to the provider
+                            version.
                           type: string
                         name:
                           description: Name of the container. Cannot be updated.
