--- a/config/crd/bases/operator.cluster.x-k8s.io_controlplaneproviders.yaml
+++ b/config/crd/bases/operator.cluster.x-k8s.io_controlplaneproviders.yaml
@@ -2688,7 +2688,9 @@ spec:
                                   type: object
                                 type: array
                               imageUrl:
-                                description: Container Image URL
+                                description: Container Image URL. If container is
+                                  "manager" and version is not specified, it will
+                                  be set to the provider version.
                                 type: string
                               name:
                                 description: Name of the container. Cannot be updated.
@@ -4101,7 +4103,9 @@ spec:
                             type: object
                           type: array
                         imageUrl:
-                          description: Container Image URL
+                          description: Container Image URL. If container is "manager"
+                            and version is not specified, it will be set to the provider
+                            version.
                           type: string
                         name:
                           description: Name of the container. Cannot be updated.
