--- a/hack/charts/cluster-api-operator/templates/deployment.yaml
+++ b/hack/charts/cluster-api-operator/templates/deployment.yaml
@@ -119,6 +119,7 @@ spec:
         volumeMounts:
         {{- toYaml . | nindent 12 }}
         {{- end }}
+        terminationMessagePolicy: FallbackToLogsOnError
       terminationGracePeriodSeconds: 10
       {{- with .Values.volumes }}
       volumes:
