Add examples for on values.yaml
Signed-off-by: Gabriel Almeida <gcezar.almeida@gmail.com>

--- a/hack/charts/cluster-api-operator/values.yaml
+++ b/hack/charts/cluster-api-operator/values.yaml
@@ -6,7 +6,17 @@ bootstrap: ""
 controlPlane: ""
 infrastructure: ""
 addon: ""
-manager.featureGates: {}
+manager:
+  featureGates: {}
+# e.g. 
+# manager:
+#   featureGates:
+#     core:
+#       KubeadmBootstrapFormatIgnition: true 
+#     bootstrap:
+#       KubeadmBootstrapFormatIgnition: true 
+#     controlPlane:
+#       KubeadmBootstrapFormatIgnition: true 
 # ---
 # Common configuration secret options
 configSecret: {}
