fix: add comments to large scope if & for loops
The intention is to reduce time to comprehension of the chart.

--- a/hack/charts/cluster-api-operator/templates/addon.yaml
+++ b/hack/charts/cluster-api-operator/templates/addon.yaml
@@ -52,5 +52,5 @@ spec:
 {{- if $.Values.secretNamespace }}
   secretNamespace: {{ $.Values.secretNamespace }}
 {{- end }}
-{{- end }}
-{{- end }}
+{{- end }} {{/* range $addon := $addons */}}
+{{- end }} {{/* if .Values.addon */}}
