--- a/hack/charts/cluster-api-operator/templates/control-plane.yaml
+++ b/hack/charts/cluster-api-operator/templates/control-plane.yaml
@@ -64,5 +64,5 @@ spec:
     namespace: {{ $.Values.configSecret.namespace }}
     {{- end }}
 {{- end }}
-{{- end }}
-{{- end }}
+{{- end }} {{/* range $controlPlane := $controlPlanes */}}
+{{- end }} {{/* if .Values.controlPlane */}}
