--- a/hack/charts/cluster-api-operator/templates/ipam.yaml
+++ b/hack/charts/cluster-api-operator/templates/ipam.yaml
@@ -69,5 +69,5 @@ spec:
 {{- if $.Values.additionalDeployments }}
   additionalDeployments: {{ toYaml $.Values.additionalDeployments | nindent 4 }}
 {{- end }}
-{{- end }}
-{{- end }}
+{{- end }} {{/* range $ipam := $ipams */}}
+{{- end }} {{/* if .Values.ipam */}}
