--- a/hack/charts/cluster-api-operator/templates/bootstrap.yaml
+++ b/hack/charts/cluster-api-operator/templates/bootstrap.yaml
@@ -51,5 +51,5 @@ spec:
     namespace: {{ $.Values.configSecret.namespace }}
     {{- end }}
 {{- end }}
-{{- end }}
-{{- end }}
+{{- end }} {{/* range $bootstrap := $bootstraps */}}
+{{- end }} {{/* if .Values.bootstrap */}}
