Add OCI source for provider ConfigMap preparation
Signed-off-by: Danil-Grigorev <danil.grigorev@suse.com>

--- a/config/crd/bases/operator.cluster.x-k8s.io_addonproviders.yaml
+++ b/config/crd/bases/operator.cluster.x-k8s.io_addonproviders.yaml
@@ -2750,6 +2750,12 @@ spec:
                   For example, the infrastructure name `aws` will fetch artifacts from
                   https://github.com/kubernetes-sigs/cluster-api-provider-aws/releases.
                 properties:
+                  oci:
+                    description: |-
+                      OCI to be used for fetching the provider’s components and metadata from an OCI artifact.
+                      You must set `providerSpec.Version` field for operator to pick up desired version of the release from GitHub.
+                      If the providerSpec.Version is missing, latest provider version from clusterctl defaults is used.
+                    type: string
                   selector:
                     description: |-
                       Selector to be used for fetching provider’s components and metadata from
