--- a/test/e2e/resources/full-chart-install.yaml
+++ b/test/e2e/resources/full-chart-install.yaml
@@ -2775,6 +2775,12 @@ spec:
                   For example, the infrastructure name `aws` will fetch artifacts from
                   https://github.com/kubernetes-sigs/cluster-api-provider-aws/releases.
                 properties:
+                  oci:
+                    description: |-
+                      OCI to be used for fetching the provider’s components and metadata from an OCI artifact.
+                      You must set `providerSpec.Version` field for operator to pick up desired version of the release from GitHub.
+                      If the providerSpec.Version is missing, latest provider version from clusterctl defaults is used.
+                    type: string
                   selector:
                     description: |-
                       Selector to be used for fetching provider’s components and metadata from
@@ -7505,6 +7511,12 @@ spec:
                   For example, the infrastructure name `aws` will fetch artifacts from
                   https://github.com/kubernetes-sigs/cluster-api-provider-aws/releases.
                 properties:
+                  oci:
+                    description: |-
+                      OCI to be used for fetching the provider’s components and metadata from an OCI artifact.
+                      You must set `providerSpec.Version` field for operator to pick up desired version of the release from GitHub.
+                      If the providerSpec.Version is missing, latest provider version from clusterctl defaults is used.
+                    type: string
                   selector:
                     description: |-
                       Selector to be used for fetching provider’s components and metadata from
@@ -12237,6 +12249,12 @@ spec:
                   For example, the infrastructure name `aws` will fetch artifacts from
                   https://github.com/kubernetes-sigs/cluster-api-provider-aws/releases.
                 properties:
+                  oci:
+                    description: |-
+                      OCI to be used for fetching the provider’s components and metadata from an OCI artifact.
+                      You must set `providerSpec.Version` field for operator to pick up desired version of the release from GitHub.
+                      If the providerSpec.Version is missing, latest provider version from clusterctl defaults is used.
+                    type: string
                   selector:
                     description: |-
                       Selector to be used for fetching provider’s components and metadata from
@@ -16968,6 +16986,12 @@ spec:
                   For example, the infrastructure name `aws` will fetch artifacts from
                   https://github.com/kubernetes-sigs/cluster-api-provider-aws/releases.
                 properties:
+                  oci:
+                    description: |-
+                      OCI to be used for fetching the provider’s components and metadata from an OCI artifact.
+                      You must set `providerSpec.Version` field for operator to pick up desired version of the release from GitHub.
+                      If the providerSpec.Version is missing, latest provider version from clusterctl defaults is used.
+                    type: string
                   selector:
                     description: |-
                       Selector to be used for fetching provider’s components and metadata from
@@ -21700,6 +21724,12 @@ spec:
                   For example, the infrastructure name `aws` will fetch artifacts from
                   https://github.com/kubernetes-sigs/cluster-api-provider-aws/releases.
                 properties:
+                  oci:
+                    description: |-
+                      OCI to be used for fetching the provider’s components and metadata from an OCI artifact.
+                      You must set `providerSpec.Version` field for operator to pick up desired version of the release from GitHub.
+                      If the providerSpec.Version is missing, latest provider version from clusterctl defaults is used.
+                    type: string
                   selector:
                     description: |-
                       Selector to be used for fetching provider’s components and metadata from
@@ -24801,6 +24831,12 @@ spec:
                   For example, the infrastructure name `aws` will fetch artifacts from
                   https://github.com/kubernetes-sigs/cluster-api-provider-aws/releases.
                 properties:
+                  oci:
+                    description: |-
+                      OCI to be used for fetching the provider’s components and metadata from an OCI artifact.
+                      You must set `providerSpec.Version` field for operator to pick up desired version of the release from GitHub.
+                      If the providerSpec.Version is missing, latest provider version from clusterctl defaults is used.
+                    type: string
                   selector:
                     description: |-
                       Selector to be used for fetching provider’s components and metadata from
@@ -27903,6 +27939,12 @@ spec:
                   For example, the infrastructure name `aws` will fetch artifacts from
                   https://github.com/kubernetes-sigs/cluster-api-provider-aws/releases.
                 properties:
+                  oci:
+                    description: |-
+                      OCI to be used for fetching the provider’s components and metadata from an OCI artifact.
+                      You must set `providerSpec.Version` field for operator to pick up desired version of the release from GitHub.
+                      If the providerSpec.Version is missing, latest provider version from clusterctl defaults is used.
+                    type: string
                   selector:
                     description: |-
                       Selector to be used for fetching provider’s components and metadata from
