test: fix helm chart e2e tests
- Modify helm test cases to use `.To(Equal())` instead of `.To(MatchYAML())`
- Add new test resource for manager-defined scenario with no feature gates
- Update some test resources with version bumps and minor spec modifications

--- a/test/e2e/resources/feature-gates.yaml
+++ b/test/e2e/resources/feature-gates.yaml
@@ -85,6 +85,7 @@ metadata:
     "helm.sh/hook-weight": "2"
     "argocd.argoproj.io/sync-wave": "2"
 spec:
+  manager:
   configSecret:
     name: aws-variables
     namespace: default
