--- a/test/e2e/resources/all-providers-manager-defined-no-feature-gates.yaml
+++ b/test/e2e/resources/all-providers-manager-defined-no-feature-gates.yaml
@@ -9,24 +9,6 @@ metadata:
     "argocd.argoproj.io/sync-wave": "1"
   name: helm-addon-system
 ---
-# Source: cluster-api-operator/templates/bootstrap.yaml
-apiVersion: v1
-kind: Namespace
-metadata:
-  annotations:
-    "helm.sh/hook": "post-install,post-upgrade"
-    "helm.sh/hook-weight": "1"
-  name: kubeadm-bootstrap-system
----
-# Source: cluster-api-operator/templates/control-plane.yaml
-apiVersion: v1
-kind: Namespace
-metadata:
-  annotations:
-    "helm.sh/hook": "post-install,post-upgrade"
-    "helm.sh/hook-weight": "1"
-  name: kubeadm-control-plane-system
----
 # Source: cluster-api-operator/templates/core.yaml
 apiVersion: v1
 kind: Namespace
@@ -36,6 +18,26 @@ metadata:
     "helm.sh/hook-weight": "1"
   name: capi-system
 ---
+# Source: cluster-api-operator/templates/infra-conditions.yaml
+apiVersion: v1
+kind: Namespace
+metadata:
+  annotations:
+    "helm.sh/hook": "post-install,post-upgrade"
+    "helm.sh/hook-weight": "1"
+    "argocd.argoproj.io/sync-wave": "1"
+  name: capi-kubeadm-bootstrap-system
+---
+# Source: cluster-api-operator/templates/infra-conditions.yaml
+apiVersion: v1
+kind: Namespace
+metadata:
+  annotations:
+    "helm.sh/hook": "post-install,post-upgrade"
+    "helm.sh/hook-weight": "1"
+    "argocd.argoproj.io/sync-wave": "1"
+  name: capi-kubeadm-control-plane-system
+---
 # Source: cluster-api-operator/templates/infra.yaml
 apiVersion: v1
 kind: Namespace
@@ -44,7 +46,7 @@ metadata:
     "helm.sh/hook": "post-install,post-upgrade"
     "helm.sh/hook-weight": "1"
     "argocd.argoproj.io/sync-wave": "1"
-  name: docker-infrastructure-system
+  name: azure-infrastructure-system
 ---
 # Source: cluster-api-operator/templates/addon.yaml
 apiVersion: operator.cluster.x-k8s.io/v1alpha2
@@ -57,30 +59,36 @@ metadata:
     "helm.sh/hook-weight": "2"
     "argocd.argoproj.io/sync-wave": "2"
 ---
-# Source: cluster-api-operator/templates/bootstrap.yaml
+# Source: cluster-api-operator/templates/infra-conditions.yaml
 apiVersion: operator.cluster.x-k8s.io/v1alpha2
 kind: BootstrapProvider
 metadata:
   name: kubeadm
-  namespace: kubeadm-bootstrap-system
+  namespace: capi-kubeadm-bootstrap-system
   annotations:
     "helm.sh/hook": "post-install,post-upgrade"
     "helm.sh/hook-weight": "2"
+    "argocd.argoproj.io/sync-wave": "2"
+spec:
+  configSecret:
+    name: test-secret-name
+    namespace: test-secret-namespace
 ---
-# Source: cluster-api-operator/templates/control-plane.yaml
+# Source: cluster-api-operator/templates/infra-conditions.yaml
 apiVersion: operator.cluster.x-k8s.io/v1alpha2
 kind: ControlPlaneProvider
 metadata:
   name: kubeadm
-  namespace: kubeadm-control-plane-system
+  namespace: capi-kubeadm-control-plane-system
   annotations:
     "helm.sh/hook": "post-install,post-upgrade"
     "helm.sh/hook-weight": "2"
+    "argocd.argoproj.io/sync-wave": "2"
 spec:
   manager:
-    featureGates:
-      ClusterTopology: true
-      MachinePool: true
+  configSecret:
+    name: test-secret-name
+    namespace: test-secret-namespace
 ---
 # Source: cluster-api-operator/templates/core.yaml
 apiVersion: operator.cluster.x-k8s.io/v1alpha2
@@ -94,16 +102,22 @@ metadata:
     "argocd.argoproj.io/sync-wave": "2"
 spec:
   manager:
+  configSecret:
+    name: test-secret-name
+    namespace: test-secret-namespace
 ---
 # Source: cluster-api-operator/templates/infra.yaml
 apiVersion: operator.cluster.x-k8s.io/v1alpha2
 kind: InfrastructureProvider
 metadata:
-  name: docker
-  namespace: docker-infrastructure-system
+  name: azure
+  namespace: azure-infrastructure-system
   annotations:
     "helm.sh/hook": "post-install,post-upgrade"
     "helm.sh/hook-weight": "2"
     "argocd.argoproj.io/sync-wave": "2"
 spec:
   manager:
+  configSecret:
+    name: test-secret-name
+    namespace: test-secret-namespace
