--- a/test/e2e/resources/manager-defined-missing-other-infra-spec.yaml
+++ b/test/e2e/resources/manager-defined-missing-other-infra-spec.yaml
@@ -66,10 +66,6 @@ metadata:
   annotations:
     "helm.sh/hook": "post-install,post-upgrade"
     "helm.sh/hook-weight": "2"
-spec:
-  configSecret:
-    name: test-secret-name
-    namespace: test-secret-namespace
 ---
 # Source: cluster-api-operator/templates/control-plane.yaml
 apiVersion: operator.cluster.x-k8s.io/v1alpha2
@@ -81,9 +77,6 @@ metadata:
     "helm.sh/hook": "post-install,post-upgrade"
     "helm.sh/hook-weight": "2"
 spec:
-  configSecret:
-    name: test-secret-name
-    namespace: test-secret-namespace
 ---
 # Source: cluster-api-operator/templates/core.yaml
 apiVersion: operator.cluster.x-k8s.io/v1alpha2
@@ -96,9 +89,10 @@ metadata:
     "helm.sh/hook-weight": "2"
     "argocd.argoproj.io/sync-wave": "2"
 spec:
-  configSecret:
-    name: test-secret-name
-    namespace: test-secret-namespace
+  manager:
+    featureGates:
+      ClusterTopology: true
+      MachinePool: true
 ---
 # Source: cluster-api-operator/templates/infra.yaml
 apiVersion: operator.cluster.x-k8s.io/v1alpha2
@@ -111,10 +105,4 @@ metadata:
     "helm.sh/hook-weight": "2"
     "argocd.argoproj.io/sync-wave": "2"
 spec:
-  configSecret:
-    name: test-secret-name
-    namespace: test-secret-namespace
   manager:
-    featureGates:
-      ClusterTopology: true
-      MachinePool: true
