:sparkles: Handle Kubernetes events for waiting CoreProvider in preflight check

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -29,7 +29,7 @@ linters:
     - errname
     - errorlint
     - exhaustive
-    - exportloopref
+    - copyloopvar
     - forcetypeassert
     - ginkgolinter
     - goconst
