feat: strict chart values schema

--- a/hack/charts/cluster-api-operator/values.yaml
+++ b/hack/charts/cluster-api-operator/values.yaml
@@ -47,7 +47,7 @@ diagnosticsAddress: ":8443"
 healthAddr: ":9440"
 insecureDiagnostics: false
 watchConfigSecret: false
-imagePullSecrets: {}
+imagePullSecrets: []
 resources:
   manager:
     limits:
