--- a/test/e2e/resources/full-chart-install.yaml
+++ b/test/e2e/resources/full-chart-install.yaml
@@ -22077,17 +22077,21 @@ spec:
         - --health-addr=:9440
         - --diagnostics-address=:8443
         - --leader-elect=true
+        - --profiler-address=localhost:6060
         command:
         - /manager
         image: "gcr.io/k8s-staging-capi-operator/cluster-api-operator:dev"
         imagePullPolicy: IfNotPresent
         name: manager
         ports:
+        - containerPort: 6060
+          name: profiler
+          protocol: TCP
         - containerPort: 9443
           name: webhook-server
           protocol: TCP
         - containerPort: 8443
-          name: metrics
+          name: diagnostics
           protocol: TCP
         resources:
             limits:
