--- a/hack/charts/cluster-api-operator/templates/core.yaml
+++ b/hack/charts/cluster-api-operator/templates/core.yaml
@@ -3,6 +3,8 @@
   {{- $coreNamespace := default "capi-system" (get $core "namespace") }}
   {{- $coreName := $name }}
   {{- $coreVersion := get $core "version" }}
+  {{- $coreCreateNamespace := default (true) (get $core "createNamespace")}}
+{{- if $coreCreateNamespace }}
 ---
 apiVersion: v1
 kind: Namespace
@@ -14,6 +16,7 @@ metadata:
     {{- end }}
     "argocd.argoproj.io/sync-wave": "1"
   name: {{ $coreNamespace }}
+{{- end }}
 ---
 apiVersion: operator.cluster.x-k8s.io/v1alpha2
 kind: CoreProvider
