--- a/hack/charts/cluster-api-operator/templates/infra.yaml
+++ b/hack/charts/cluster-api-operator/templates/infra.yaml
@@ -3,6 +3,8 @@
   {{- $infrastructureNamespace := default ( printf "%s-%s" $name "infrastructure-system" ) (get $infra "namespace") }}
   {{- $infrastructureName := $name }}
   {{- $infrastructureVersion := get $infra "version" }}
+  {{- $infraCreateNamespace := default (true) (get $infra "createNamespace")}}
+{{- if $infraCreateNamespace }}
 ---
 apiVersion: v1
 kind: Namespace
@@ -14,6 +16,7 @@ metadata:
     {{- end }}
     "argocd.argoproj.io/sync-wave": "1"
   name: {{ $infrastructureNamespace }}
+{{- end }}
 ---
 apiVersion: operator.cluster.x-k8s.io/v1alpha2
 kind: InfrastructureProvider
