--- a/hack/charts/cluster-api-operator/templates/addon.yaml
+++ b/hack/charts/cluster-api-operator/templates/addon.yaml
@@ -3,6 +3,8 @@
   {{- $addonNamespace := default ( printf "%s-%s" $name "addon-system" ) (get $addon "namespace") }}
   {{- $addonName := $name }}
   {{- $addonVersion := get $addon "version" }}
+  {{- $addonCreateNamespace := default (true) (get $addon "createNamespace")}}
+{{- if $addonCreateNamespace }}
 ---
 apiVersion: v1
 kind: Namespace
@@ -14,6 +16,7 @@ metadata:
     {{- end }}
     "argocd.argoproj.io/sync-wave": "1"
   name: {{ $addonNamespace }}
+{{- end }}
 ---
 apiVersion: operator.cluster.x-k8s.io/v1alpha2
 kind: AddonProvider
