--- a/hack/charts/cluster-api-operator/templates/bootstrap.yaml
+++ b/hack/charts/cluster-api-operator/templates/bootstrap.yaml
@@ -3,6 +3,8 @@
   {{- $bootstrapNamespace := default ( printf "%s-%s" $name "bootstrap-system" ) (get $bootstrap "namespace") }}
   {{- $bootstrapName := $name }}
   {{- $bootstrapVersion := get $bootstrap "version" }}
+  {{- $bootstrapCreateNamespace := default (true) (get $bootstrap "createNamespace")}}
+{{- if $bootstrapCreateNamespace }}
 ---
 apiVersion: v1
 kind: Namespace
@@ -14,6 +16,7 @@ metadata:
     {{- end }}
     "argocd.argoproj.io/sync-wave": "1"
   name: {{ $bootstrapNamespace }}
+{{- end }}
 ---
 apiVersion: operator.cluster.x-k8s.io/v1alpha2
 kind: BootstrapProvider
