fix(chart): wrong condition in template

--- a/hack/charts/cluster-api-operator/templates/addon.yaml
+++ b/hack/charts/cluster-api-operator/templates/addon.yaml
@@ -3,8 +3,7 @@
   {{- $addonNamespace := default ( printf "%s-%s" $name "addon-system" ) (get $addon "namespace") }}
   {{- $addonName := $name }}
   {{- $addonVersion := get $addon "version" }}
-  {{- $addonCreateNamespace := default (true) (get $addon "createNamespace")}}
-{{- if $addonCreateNamespace }}
+{{- if ne $addon.createNamespace false }}
 ---
 apiVersion: v1
 kind: Namespace
